# chess

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  STRUCTURE_UPDATE.md  chess_demo.ipynb  feature_explainability_audit.py  justfile  model.json  pyproject.toml  test_rust_features.py
.github/workflows/: ci.yml
docs/: DESIGN_SYSTEM.md  README.md  WEB_APP.md
rust/: Cargo.toml
rust/src/: engine.rs  eval.rs  features.rs  lib.rs  main.rs  pawn_cache.rs  search.rs  see.rs  syzygy.rs  web_server.rs  zobrist.rs
rust/src/ml/: explainer.rs  mod.rs  model.rs  scaler.rs  trainer.rs
scripts/: README.md  benchmark_commits.py  benchmark_python_probes.py  benchmark_rust.py  export_site_data.py  fetch_syzygy.py  profile_probes_rust.py  run_web.sh  test_rust_features.py  verify_syzygy_endgames.py  verify_syzygy_impact.py
src/: engine.rs  eval.rs  lib.rs  main.rs  syzygy_utils.rs  web_server.rs
src/chess_ai/: __init__.py  audit.py  audit_enrichment.py  explainable_engine.py  hardcoded_reasons.py  model_trainer.py  move_explanation.py  surrogate_explainer.py  tree_surrogate.py
src/chess_ai/audit/: __init__.py  audit_enrichment.py  workers.py
src/chess_ai/cli/: __init__.py  audit.py  explainable.py  main.py
src/chess_ai/engine/: __init__.py  config.py  hardcoded_reasons.py  interface.py  recommendations.py  syzygy.py
src/chess_ai/features/: __init__.py  baseline.py  engine_probes.py  pst_tables.py  see_python.py  utils.py
src/chess_ai/metrics/: __init__.py  kendall.py  positional.py
src/chess_ai/rust_utils/: __init__.py
src/chess_ai/utils/: __init__.py  engine_discovery.py  math.py  sampling.py
src/chess_ai/web/: README.md  __init__.py  app.py
src/chess_ai/web/static/: app.js  chess.js  style.css
src/chess_ai/web/static/css/: style.css
src/chess_ai/web/static/js/: app.js  chess.js
src/chess_ai/web/templates/: dashboard.html  index.html
src/chess_feature_audit/: __init__.py  audit.py  cli.py
src/chess_feature_audit/engine/: interface.py
src/chess_feature_audit/utils/: __init__.py
src/ml/: explainer.rs  mod.rs  model.rs
tests/: conftest.py
tests/integration/: test_integration.py
tests/unit/: test_audit.py  test_audit_extended.py  test_cli.py  test_cli_audit_extended.py  test_cli_explainable.py  test_cli_main.py  test_coverage_95.py  test_explainability_improvements.py  test_explainable_engine.py  test_explainable_engine_explain.py  test_explainable_engine_extended.py  test_explainable_engine_model_init.py  test_explanations.py  test_features_new.py  test_model_trainer.py  test_model_trainer_extended.py  test_model_trainer_probes.py  test_mutant_killers.py  test_surrogate_explainer.py  test_web_app.py
tests/unit/audit/: test_core.py  test_metrics.py  test_workers.py
tests/unit/engine/: test_config.py  test_core.py  test_explanations.py  test_interface.py  test_recommendations.py  test_syzygy.py
tests/unit/features/: test_baseline.py  test_baseline_coverage.py  test_baseline_extended.py  test_baseline_probes.py  test_utils.py
tests/unit/metrics/: test_kendall.py  test_positional.py
tests/unit/utils/: test_math.py  test_sampling.py  test_sampling_extended.py
web/static/css/: style.css
web/static/js/: app.js  chess.js
web/templates/: dashboard.html
