[package]
name = "chess_ai_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "chess_ai_rust"
crate-type = ["rlib"]

[[bin]]
name = "chess-ai"
path = "src/main.rs"

[dependencies]
shakmaty = "0.28.0"
shakmaty-syzygy = "0.26"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = { version = "0.16", features = ["serde"] }
linfa = "0.8.1"
linfa-elasticnet = "0.8.1"
linfa-preprocessing = "0.8.1"
rand = "0.8"
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tera = "1.19"
