[package]
name = "chess_ai_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "_chess_ai_rust"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "chess-ai"
path = "src/main.rs"

[dependencies]
shakmaty = "0.28.0"
shakmaty-syzygy = "0.26"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.28.0", optional = true }

[features]
default = []
python = ["dep:pyo3", "pyo3/extension-module"]
